--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const userId = urlParams.get('user_id');
-        window.location.href = `https://192.168.100.204:8080?user_id=${userId}`;
+        window.location.href = `http://192.168.100.204:8080?user_id=${userId}`;
     </script>
 </head>
 <body>
     <p>Перенаправление...</p>
 </body>
 </html>
+
