--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const userId = urlParams.get('user_id');
-        window.location.href = `http://45.144.64.84:8020?user_id=${userId}`;
+        window.location.href = `http://192.168.100.204:8080/?user_id=${userId}`;
     </script>
 </head>
 <body>
     <p>Перенаправление...</p>
 </body>
 </html>
+
 
 
 
